# heimdall

./: .gitignore  CLAUDE.md  COMMENTs.md  README.md  pyproject.toml
.aim/: memory.jsonl
docs/: onboard-tips.txt
docs/plans/: 2026-03-29-ai-profile-design.md  2026-03-29-ai-profile-implementation.md  2026-04-04-ai-dispatch-phase2.md  2026-04-06-ai-do-phase3.md
docs/reference/: 77cd36a8-e539-496c-97b6-4e0f8320997e.jsonl  AGENTS.md  IDEAs.md  SUMMARY.md  ai-cli-orchestration.md
scripts/: scaffold-profiles.py  smoke-dispatch.sh
src/: ai_dispatch.py  ai_do.py  ai_profile.py  ai_status.py
tests/: conftest.py  test_ai_do.py  test_ai_status.py  test_commands.py  test_dispatch.py  test_merge.py  test_symlinks.py
